--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,14 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #[em My Everything List], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+
+  h1 Dynamic content
+
+  if error
+    p Error getting dynamic content.
+  else
+    p The list has the following entry counts:
+
+    ul
+      li #[strong Entries:] !{data.entry_count}
